Migrate commons-cli to Java 21
This commit migrates the package to the latest Java, and follows
the new syntax. It also removes deprecated structures, e.g:
- URL constructor
- Character, Integer, Long constructor

The other changes involve:
- Switch new syntax
- Multi-line strings